# silero

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README-zh_CN.md  README.md  THIRD_PARTY_NOTICES.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  loc.yml
benches/: vad_bench.rs
examples/: compare_vs_audio_bench.rs  detect_file.rs  streaming.rs
src/: config.rs  detector.rs  error.rs  io.rs  iterator.rs  lib.rs  model.rs  options.rs  resample.rs  session.rs  stream.rs  timestamps.rs
tests/: integration_test.rs
