[package]
name = "silero"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/Findit-AI/silero"
homepage = "https://github.com/Findit-AI/silero"
documentation = "https://docs.rs/silero"
description = "Production-oriented Rust wrapper for the Silero VAD ONNX model."
keywords = ["vad", "voice-detection", "silero-vad", "speech", "onnx"]
categories = ["multimedia::audio", "science"]
license = "MIT OR Apache-2.0"
readme = "README.md"
include = [
  "Cargo.toml",
  "README.md",
  "THIRD_PARTY_NOTICES.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "models/silero_vad.onnx",
  "src/**",
  "build.rs",
  "examples/**",
  "tests/**",
]

[features]
default = ["bundled"]
bundled = []

[dependencies]
ort = "2.0.0-rc.12"
thiserror = "2"

[dev-dependencies]
hound = "3"

[[example]]
name = "detect_file"
path = "examples/detect_file.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
] }
